--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "discord.js": "^11.3.0",
     "enmap": "^0.4.2",
     "querystring": "^0.2.0",
-    "snekfetch": "^3.6.4"
+    "snekfetch": "^3.6.4",
+    "weather-js": "^2.0.0",
+    "opusscript": "0.0.6",
+    "ytdl-core": "^0.20.2"
   }
 }
